--- a/settings/project.json
+++ b/settings/project.json
@@ -1,11 +1,5 @@
 {
-  "cocos-analytics": {
-    "appID": "13798",
-    "appSecret": "959b3ac0037d0f3c2fdce94f8421a9b2",
-    "channel": "",
-    "enable": false,
-    "version": ""
-  },
+  "assets-sort-type": "name",
   "collision-matrix": [
     [
       true,
@@ -19,18 +13,29 @@
   "design-resolution-height": 1920,
   "design-resolution-width": 1080,
   "excluded-modules": [],
+  "facebook": {
+    "appID": "",
+    "audience": {
+      "enable": false
+    },
+    "enable": false,
+    "live": {
+      "enable": false
+    }
+  },
   "fit-height": false,
   "fit-width": true,
   "group-list": [
     "default",
     "player"
   ],
+  "last-module-event-record-time": 1562748190920,
   "simulator-orientation": false,
   "simulator-resolution": {
     "height": 640,
     "width": 960
   },
+  "start-scene": "current",
   "use-customize-simulator": false,
-  "use-project-simulator-setting": false,
-  "start-scene": "current"
+  "use-project-simulator-setting": false
 }
